2015-08-13  Oliver Kiddle <opk@zsh.org>

	* Eric Cook: 36113: Completion/Unix/Type/_find_net_interfaces:
	ip(8) may add suffixes which is not good for completion matches

	* Wieland Hoffmann: 36123: Completion/Unix/Command/_git:
	protect against word splitting in __git_is_committish_range

2015-08-12  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Kamil Dudka: 36106: Src/Zle/zle_keymap.c: fix const parameter.

2015-08-12  Oliver Kiddle <opk@zsh.org>

	* 36127: Completion/Zsh/Context/_brace_parameter,
	Completion/Unix/Command/_git, Completion/Unix/Command/_ifconfig,
	Completion/Unix/Command/_kvno, Completion/Unix/Command/_mh,
	Completion/Unix/Command/_rm, Completion/Unix/Command/_ssh,
	Completion/Unix/Command/_stty, Completion/Unix/Command/_vim,
	Completion/Unix/Type/_pdf, Completion/Unix/Command/_clay:
	assorted minor completion function changes

	* 36125: Src/Zle/zle_hist.c: don't set history context in get-line

	* 35834 (tweaked): Src/Zle/zle_misc.c: strip a final newline from
	pasted text: inserting is hard to tell apart from accepting it

2015-08-12  Mikael Magnusson  <mikachu@gmail.com>

	* 36077: Functions/VCS_Info/Backends/VCS_INFO_get_data_bzr,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_hg,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_p4,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_svk,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_svn,
	Functions/VCS_Info/VCS_INFO_formats,
	Functions/VCS_Info/VCS_INFO_hook,
	Functions/VCS_Info/VCS_INFO_quilt,
	Functions/VCS_Info/VCS_INFO_set, Functions/VCS_Info/vcs_info,
	Functions/VCS_Info/vcs_info_lastmsg,
	Functions/VCS_Info/vcs_info_printsys: vcs_info: stop exporting
	everything

	* 36078: Doc/Zsh/contrib.yo: vcs_info: Adjust documentation for
	no longer exporting

	* 36116: Completion/Unix/Command/_git: various fixes

	* 36117: Completion/Unix/Command/_wget: complete headers for
	--header and add --no-use-server-timestamps

	* 36118: Completion/Unix/Command/_imagemagick: complete all